# cmakefmt

./: .gitattributes  LICENSE  README.md  build.zig  build.zig.zon  test.sh
.github/workflows/: ci.yml
src/: args.zig  builtin_commands.zig  formatter.zig  generator.zig  lexer.zig  lexer_test.zig  main.zig
test/: CMakeLists.txt  comment_after_cmd.cmake  test.cmake  test.crlf.cmake  test.expected.cmake
